--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -2,8 +2,18 @@
   background: rgb(63, 66, 108);
   background: linear-gradient(135deg, rgb(63, 66, 108) 7%, rgb(135, 139, 195) 33%, rgb(172, 210, 228) 75%, rgb(235, 241, 244) 93%);
   font-size: 0.6em;
-
-
 }
 
-/*# sourceMappingURL=personal-style.css.map */
+.your-episode {
+  background: #004537;
+  font-size: 0.7em;
+  color: #149643 !important;
+}
+
+.nome_amici {
+  font-size: 0.8rem;
+}
+
+.testo_amici {
+  font-size: 0.7rem;
+}/*# sourceMappingURL=personal-style.css.map */
