--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -7,4 +7,18 @@ font-size: 0.6em;
 
 }
 
-.your-episode{background: #004537;}
+.your-episode{
+    background: #004537;
+    font-size: 0.7em;
+    color:#149643 !important; 
+}
+
+
+
+.nome_amici{
+    font-size: 0.8rem;
+}
+
+.testo_amici {
+    font-size: 0.7rem;
+}
