--- a/assets/css/personal-style.css
+++ b/assets/css/personal-style.css
@@ -1,9 +1,5 @@
 .personal-bg {
-  background-color: #181818 !important;
-}
-
-.personal-border {
-  border-top: 1px solid rgba(255, 255, 255, 0.197);
+  background-color: blue !important;
 }
 
 .favourite-song-bg {
