--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -1,4 +1,10 @@
+.personal-bg{
+    background-color:#181818 !important;
+}
 
+.personal-border{
+    border-top: 1px solid rgba(255, 255, 255, 0.197);
+}
 
 
 .favourite-song-bg{background: rgb(63,66,108);
