--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -20,7 +20,6 @@ font-size: 0.6em;
 }
 
 
-
 .nome_amici{
     font-size: 0.8rem;
 }
@@ -28,3 +27,39 @@ font-size: 0.6em;
 .testo_amici {
     font-size: 0.7rem;
 }
+
+// User Logo
+.logouser {
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 32px;
+    border-radius: 16px;
+    padding: 1px;
+    background-color: #000;
+  }
+  .logousername {
+    color: #fff;
+    font-size: 0.9em;
+    margin-right: 8px;
+  }
+  .logofigure {
+    width: 25px;
+    height: 25px;
+    background-color: #2a2a2a;
+    border-radius: 50%;
+    margin-right: 8px;
+    margin-left: 2px;
+    display: grid;
+    place-items: center;
+  }
+  .logousername {
+    color: #fff;
+    font-size: 0.9em;
+    margin-right: 8px;
+  }
+  .logo__expand-arrow {
+    transform: rotateZ(180deg);
+    margin-right: 8px;
+  }
