--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -25,7 +25,7 @@
 .testo_amici {
   font-size: 0.7rem;
 }
-/* LOGO USER */
+
 .logouser {
   border: 0;
   display: flex;
@@ -63,4 +63,8 @@
 .logo__expand-arrow {
   transform: rotateZ(180deg);
   margin-right: 8px;
+}
+
+.size_img {
+  height: 4rem;
 }/*# sourceMappingURL=personal-style.css.map */
