--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -5,7 +5,16 @@
 .personal-border {
     border-top: 1px solid rgba(255, 255, 255, 0.197);
 }
+/* PERSONALIZZAZIONE BOTTONI */
+.button-personal{
+    background-color: rgba(0, 0, 0, 0.279) !important;
+}
 
+.button-personal:hover{
+    background-color: #000!important;
+}
+
+/* ICONE DELLA NAV BAR A SX*/
 
 .favourite-song-bg {
     background: rgb(63, 66, 108);
@@ -28,6 +37,14 @@
 .testo_amici {
     font-size: 0.7rem;
 }
+
+/* PARAGRAFI DELLA PLAYLIST */
+.playlist-sel p:hover{
+    color:white !important;
+    cursor: pointer;
+}
+
+
 
 // User Logo
 .logouser {
@@ -71,4 +88,19 @@
 
 .size_img {
     height: 4rem;
+}
+
+/* PERSONALIZZAZIONE CARDS BUONASERA */
+.bg-card-personal{
+    background-color: #2D2D2D !important;
+    cursor: pointer;
+}
+
+.bg-card-personal:hover{
+    background-color: #4d4c4c !important;
+}
+
+.font-personal{
+    font-size: 0.8rem !important;
+    font-weight: 700;
 }
