--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -42,6 +42,28 @@
   cursor: pointer;
 }
 
+.personal-list:hover {
+  background-color: #4d4c4c !important;
+  transition: 0.3s;
+  cursor: pointer;
+  color: white; /* Questo rende il testo bianco */
+}
+
+.personal-list:hover * {
+  color: white !important; /* Questo rende tutti gli elementi figli bianchi */
+  transition: 0.3s;
+}
+
+.personal-list a i:hover {
+  color: white !important;
+  transition: 0.3s;
+}
+
+/* CAROSELLO */
+.fs-tile {
+  font-size: 100px !important;
+}
+
 .logouser {
   border: 0;
   display: flex;
@@ -98,4 +120,25 @@
 .font-personal {
   font-size: 0.8rem !important;
   font-weight: 700;
+}
+
+/* PERSONALIZZAZIONE CARDS ALTRO CHE TI PIACE */
+.personal-card {
+  background-color: #171717 !important;
+}
+
+.personal-card:hover {
+  background-color: #4d4c4c !important;
+}
+
+.link-personal {
+  text-decoration: none !important;
+  color: white !important;
+  font-weight: 700;
+}
+
+.fs-personal {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: small !important;
 }/*# sourceMappingURL=personal-style.css.map */
