--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -110,11 +110,12 @@
 /* PERSONALIZZAZIONE CARDS BUONASERA */
 .bg-card-personal {
   background-color: #2D2D2D !important;
-  cursor: pointer;
 }
 
 .bg-card-personal:hover {
   background-color: #4d4c4c !important;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
 .font-personal {
@@ -123,11 +124,16 @@
 }
 
 /* PERSONALIZZAZIONE CARDS ALTRO CHE TI PIACE */
-.personal-card {
-  background-color: #171717 !important;
+.card-personal {
+  background-color: #2D2D2D !important;
+  border-radius: 0.3rem !important;
+  padding: 1rem !important;
+  position: relative;
+  transition: all 0.4s;
+  cursor: pointer;
 }
 
-.personal-card:hover {
+.card-personal:hover {
   background-color: #4d4c4c !important;
 }
 
