--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -72,3 +72,9 @@
 .size_img {
     height: 4rem;
 }
+
+#sfondo_immagine {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat ;
+}
