--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -1,5 +1,4 @@
 @import url(//db.onlinewebfonts.com/c/860c3ec7bbc5da3e97233ccecafe512e?family=Circular+Std+Book);
-
 .personal-bg {
   background-color: #181818 !important;
 }
@@ -48,13 +47,11 @@
   background-color: #4d4c4c !important;
   transition: 0.3s;
   cursor: pointer;
-  color: white;
-  /* Questo rende il testo bianco */
+  color: white; /* Questo rende il testo bianco */
 }
 
 .personal-list:hover * {
-  color: white !important;
-  /* Questo rende tutti gli elementi figli bianchi */
+  color: white !important; /* Questo rende tutti gli elementi figli bianchi */
   transition: 0.3s;
 }
 
@@ -65,7 +62,7 @@
 
 /* CAROSELLO */
 .fs-tile {
-  font-size: 100px !important;
+  font-size: 5em !important;
 }
 
 .logouser {
@@ -213,7 +210,8 @@ footer i:hover {
 .image-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .song-description p {
@@ -332,4 +330,7 @@ footer i:hover {
   --size: .8em;
 }
 
-/*# sourceMappingURL=personal-style.css.map */
+#sfondo_immagine {
+  background-size: cover;
+  background-repeat: no-repeat;
+}/*# sourceMappingURL=personal-style.css.map */
