--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -66,7 +66,7 @@
 /* CAROSELLO */
 
 .fs-tile{
-    font-size: 100px!important;
+    font-size: 5em!important;
 }
 
 // User Logo
@@ -316,6 +316,6 @@ footer i:hover{
 
 #sfondo_immagine {
     background-size: cover;
-    background-position: center;
+    //background-position: center;
     background-repeat: no-repeat ;
 }
