--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -40,6 +40,8 @@
 /* PARAGRAFI DELLA PLAYLIST */
 .playlist-sel p:hover {
   color: white !important;
+  background-color: #2D2D2D !important;
+  transition: 0.3s;
   cursor: pointer;
 }
 
@@ -61,8 +63,8 @@
 }
 
 /* CAROSELLO */
-.fs-tile {
-  font-size: 5em !important;
+.fs-title {
+  font-size: 3em !important;
 }
 
 .logouser {
@@ -144,6 +146,11 @@
   font-weight: 700;
 }
 
+.link-personal:hover {
+  text-decoration: underline !important;
+  transition: all 0, 4s;
+}
+
 .fs-personal {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -210,8 +217,7 @@ footer i:hover {
 .image-container img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .song-description p {
