--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -66,10 +66,14 @@
 }
 
 /* CAROSELLO */
-
 .fs-title{
     font-size: 3em!important;
 }
+.title-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow:ellipsis;
+  }
 
 // User Logo
 .logouser {
