--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -64,12 +64,12 @@
 
 /* CAROSELLO */
 .fs-title {
-  font-size: 3em !important;
+  font-size: 2.5em !important;
 }
 
 .title-ellipsis {
   white-space: nowrap;
-  overflow: hidden;
+  overflow-x: hidden;
   text-overflow: ellipsis;
 }
 
