--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -67,12 +67,12 @@
 
 /* CAROSELLO */
 .fs-title{
-    font-size: 3em!important;
+    font-size: 2.5em!important;
 }
 .title-ellipsis {
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow:ellipsis;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
   }
 
 // User Logo
