--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -330,7 +330,26 @@ footer i:hover {
   --size: .8em;
 }
 
-#sfondo_immagine {
+.sfondo-img {
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.testo {
+  position: relative;
+  z-index: 1;
+}
+
+.heigth {
+  height: 50vh !important;
 }/*# sourceMappingURL=personal-style.css.map */
