--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -341,7 +341,7 @@ footer i:hover {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 50vh;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
