--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -352,4 +352,8 @@ footer i:hover {
 
 .heigth {
   height: 50vh !important;
+}
+
+.xin {
+  z-index: 5;
 }/*# sourceMappingURL=personal-style.css.map */
