--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -67,9 +67,13 @@
   font-size: 2.5em !important;
 }
 
+#grandezza_div {
+  width: 50px !important;
+}
+
 .title-container {
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: clip;
+  text-wrap: nowrap;
 }
 
 .logouser {
@@ -222,7 +226,8 @@ footer i:hover {
 .image-container img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .song-description p {
