--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -1,5 +1,4 @@
 @import url(//db.onlinewebfonts.com/c/860c3ec7bbc5da3e97233ccecafe512e?family=Circular+Std+Book);
-
 .personal-bg {
   background-color: #181818 !important;
 }
@@ -50,13 +49,11 @@
   background-color: #4d4c4c !important;
   transition: 0.3s;
   cursor: pointer;
-  color: white;
-  /* Questo rende il testo bianco */
+  color: white; /* Questo rende il testo bianco */
 }
 
 .personal-list:hover * {
-  color: white !important;
-  /* Questo rende tutti gli elementi figli bianchi */
+  color: white !important; /* Questo rende tutti gli elementi figli bianchi */
   transition: 0.3s;
 }
 
@@ -229,7 +226,6 @@ footer i:hover {
 .image-container img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
   object-fit: cover;
 }
 
@@ -391,5 +387,17 @@ footer i:hover {
   z-index: 5;
 }
 
-/* MEDIA QUERY ICONE PLAYER */
-/*# sourceMappingURL=personal-style.css.map */
+/* MEDIA QUERY PLAYER */
+@media screen and (max-width: 768px) {
+  .other-features {
+    display: none !important;
+  }
+  .play-pause {
+    background-color: transparent !important;
+    color: white !important;
+  }
+  .d-flex-personal {
+    display: flex !important;
+    justify-content: center !important;
+  }
+}/*# sourceMappingURL=personal-style.css.map */
