--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -373,6 +373,10 @@ footer i:hover {
   z-index: 5;
 }
 
+
+.fs-title-due {font-size: 5.5em !important;}
+
+
 /* MEDIA QUERY PLAYER */
 @media screen and (max-width:768px){
   .other-features{
