--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -44,6 +44,14 @@
   font-size: 0.7rem;
 }
 
+/* FUNZIONE CERCA */
+
+.personal-button{
+  font-size: 0.6rem;
+}
+
+
+
 /* PARAGRAFI DELLA PLAYLIST */
 .playlist-sel p:hover {
   color: white !important;
