--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -389,7 +389,12 @@ footer i:hover {
 @media screen and (max-width:768px){
   .other-features{
     display: none !important;
+  
+   
+  
   }
+
+  .song-bar{  display: none !important;}
 
   .play-pause{
     background-color: transparent !important;
