--- a/assets/scss/my-style/personal-style.css
+++ b/assets/scss/my-style/personal-style.css
@@ -308,7 +308,7 @@ footer i:hover {
 .progress {
   position: relative;
   height: 100%;
-  width: 30%;
+  width: 0;
   border-radius: 10px;
   background-color: var(--secondary-color);
 }
