--- a/assets/scss/my-style/personal-style.scss
+++ b/assets/scss/my-style/personal-style.scss
@@ -302,9 +302,10 @@ footer i:hover {
 .progress {
   position: relative;
   height: 100%;
-  width: 30%;
+  width: 0;
   border-radius: 10px;
   background-color: var(--secondary-color);
+
 }
 .progress-bar:hover .progress {
   background-color: var(--green-color);
